--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
+    "redis": "^3.0.2",
     "redux": "^4.0.1"
   },
   "scripts": {
